--- a/app/src/main/res/layout/title_editor.xml
+++ b/app/src/main/res/layout/title_editor.xml
@@ -14,16 +14,17 @@
      limitations under the License.
 -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
-  	android:layout_width="wrap_content" 
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingLeft="6dip"
     android:paddingRight="6dip"
     android:paddingBottom="3dip">
    					  
-    <EditText android:id="@+id/title" 
-        android:maxLines="1" 
+    <EditText android:id="@+id/title"
+        android:maxLines="1"
         android:layout_marginTop="2dp"
         android:layout_marginBottom="15dp"
         android:layout_width="wrap_content"
@@ -38,6 +39,7 @@
         android:layout_height="wrap_content" 
         android:layout_gravity="right"
         android:text="@string/button_ok"
-        android:onClick="onClickOk" />
+        android:onClick="onClickOk"
+        tools:ignore="RtlHardcoded" />
    		
 </LinearLayout>
