--- a/app/src/main/res/layout/noteslist_item.xml
+++ b/app/src/main/res/layout/noteslist_item.xml
@@ -15,14 +15,29 @@
         android:layout_margin="4dp"
         android:background="@drawable/note_item_background"
         android:elevation="4dp"
+        android:orientation="horizontal"
         android:padding="12dp"
         tools:ignore="UselessParent">
 
         <TextView
             android:id="@android:id/text1"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:maxWidth="200dp"
+            android:singleLine="true"
             android:textColor="@color/text_black"
             android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/update_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:textColor="@color/time_color"
+            android:textSize="12sp" />
+
     </LinearLayout>
 </LinearLayout>
