--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="bg_light_pink">#FCE4EC</color> <!-- 浅粉 -->
     <color name="bg_light_purple">#F3E5F5</color> <!-- 浅紫 -->
     <color name="time_color">#999999</color> <!-- 淡灰色时间 -->
+    <color name="border_gray">#999999</color> <!-- 淡灰色时间 -->
     <!-- 黑色文字 -->
     <color name="text_black">#000000</color>
     <!-- 深灰色-用于副标题 -->
